1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (REVISION): Increment.  Swarm 1.3.1 released.

1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Map.[hm]: ([MapIndex_c -setLoc:]): 
	Make argument to setLoc: of type id <Symbol>.

	* Set.[hm] ([SetIndex_c -setLoc:]): Likewise.

	* List_GEN.[hm] ([TINDEX -setLoc:]): Likewise.

	* Array.[hm] ([ArrayIndex_c -setLoc:]): Likewise.

	* Map.h, List_GEN.h, Set.h: Reformatting throughout.

	* collections.h (INDEXSTARTP, INDEXENDP, REMOVEDP,
	ARCHIVERLITERALP): New macros.

	* Collection.m: Reformatting throughout.
	([Index_any -findNext:]): Use INDEXENDP.
	([Index_any -findPrev:]): Use INDEXSTARTP.

	* Array.m: Reformatting throughout.
	Include collections.h.
	([ArrayIndex_c -next], [ArrayIndex_c -prev], [ArrayIndex_c -get], 
	[ArrayIndex_c -put:], [ArrayIndex_c -getLoc], [ArrayIndex_c -setLoc:],
	[ArrayIndex_c -getOffset]):  Use INDEX{START,END}P.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.
	(install-data-local): Do two installs, for install-sh case.

1998-07-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Array.m (initArray): Avoid allocating a block of size zero.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h: Replace @deftype with @protocol throughout.

1998-07-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am: Replace String with StringObject.

	* StringObject.m, predicates.m: Include StringObject.h instead of
	String.h.

1998-07-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h: Remove Stack and Queue (now in design document).

1998-07-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Map.m ([Map_c -at:insert:]): Actually reject an insert for
	a pre-existing key.

	* collections.h (Map): Remove mention of DupOption.

	* Makefile.am (INCLUDES): Add misc.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
