@@ -1,6 +1,9 @@
-1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+1998-10-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (REVISION): Increment.  Swarm 1.3.1 released.
+
+	* StringObject.m ([String_c +create:setC:]): Use getZone instead
+	of argument aZone for allocating string space.
 
 1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
